syntax = 'proto3';

package com.devper.reporter.protobuf;

message BalanceRequest {
    string jwtToken = 1;
}

message UserBalance {
    string username = 1;
    int64 balance = 2;
}

service ReportService {
    rpc BalanceReport (BalanceRequest) returns (UserBalance) {}
}